--- a/force-app/main/default/classes/Test_ValitiveEventsSyncQueueable.cls
+++ b/force-app/main/default/classes/Test_ValitiveEventsSyncQueueable.cls
@@ -5,11 +5,22 @@ private class Test_ValitiveEventsSyncQueueable {
     private static ValitiveClientMock mock = new ValitiveClientMock(mockProvider);
 
     @IsTest
-    static void should_sync_events() {
+    static void should_sync_private_events() {
         mock.buildMockServer();
         Test.setMock(HttpCalloutMock.class, mock.mockServer);
         Test.startTest();
         ValitiveEventsSyncQueueable queueable = new ValitiveEventsSyncQueueable('Private');
+        queueable.service.setMockIValitivePropertiesProvider(mockProvider);
+        System.enqueueJob(queueable);
+        Test.stopTest();
+    }
+
+    @IsTest
+    static void should_sync_organization_events() {
+        mock.buildMockServer();
+        Test.setMock(HttpCalloutMock.class, mock.mockServer);
+        Test.startTest();
+        ValitiveEventsSyncQueueable queueable = new ValitiveEventsSyncQueueable('Organization');
         queueable.service.setMockIValitivePropertiesProvider(mockProvider);
         System.enqueueJob(queueable);
         Test.stopTest();
@@ -20,6 +31,17 @@ private class Test_ValitiveEventsSyncQueueable {
         Test.startTest();
         String cronExpression = '0 0 0 * * ?';
         ValitiveEventsSyncSch schedulable = new ValitiveEventsSyncSch();
+        String jobId = System.schedule('Test Job', cronExpression, schedulable);
+        CronTrigger ct = [SELECT Id, CronExpression, TimesTriggered, NextFireTime FROM CronTrigger WHERE id = :jobId];
+        System.assertEquals(cronExpression, ct.CronExpression);
+        Test.stopTest();
+    }
+
+    @isTest
+    static void should_run_ValitiveOrgEventsSyncSch() {
+        Test.startTest();
+        String cronExpression = '0 0 0 * * ?';
+        ValitiveOrgEventsSyncSch schedulable = new ValitiveOrgEventsSyncSch();
         String jobId = System.schedule('Test Job', cronExpression, schedulable);
         CronTrigger ct = [SELECT Id, CronExpression, TimesTriggered, NextFireTime FROM CronTrigger WHERE id = :jobId];
         System.assertEquals(cronExpression, ct.CronExpression);
